# helloworld

./: README.TXT  Visual Studio 2008 Command Prompt.lnk  build.bat  build.sh  coverageTest.sh  createVSProject.bat  env.bat
doc/: Doxyfile
scripts/: test4ccache
setup/: COPYRIGHT.TXT  README.TXT  hello.xcf
src/: CMakeLists.txt  CTestConfig.txt  main.c
src/cmake/: lcov.cmake
src/hellolib/: CMakeLists.txt  hellolib.c  hellolib.h
